k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: family-tree
  name: family-tree
spec:
  replicas: 1
  selector:
    matchLabels:
      app: family-tree
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: family-tree
    spec:
      containers:
      - image: docker.io/krishbharath/family-tree-backend
        args:
        - --verbose
        name: family-tree-backend
        resources: {}
status: {}
