k8s/dev/resource.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: family-tree-backend
    tier: backend
  name: family-tree-backend
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: family-tree-backend
    tier: backend
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: family-tree-backend
    tier: backend
  name: family-tree-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: family-tree-backend
      tier: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: family-tree-backend
        tier: backend
    spec:
      containers:
      - args:
        - --verbose
        image: docker.io/krishbharath/family-tree-backend:44f7827
        name: family-tree-backend
        resources: {}
status: {}
