k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: family-tree
  name: family-tree
spec:
  ports:
  - port: 8088
    protocol: TCP
    targetPort: 8088
  selector:
    app: family-tree
  type: NodePort
status:
  loadBalancer: {}
